<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EcoHero</string>
    <string name="mulai">Mulai</string>
    <string name="mulai_klasifikasi_sampahmu">Mulai Klasifikasi Sampahmu</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Scan</string>
    <string name="title_notifications">Tentang</string>
    <string name="welcome">Selamat Datang</string>
    <string name="kenali_jenis_sampah">Kenali Jenis Sampah</string>
    <string name="jenis_jenis_sampah">Jenis - Jenis Sampah</string>
    <string name="nama_sampah">Nama Sampah</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="par1">Aplikasi Deteksi Jenis Sampah membantu pengguna membedakan antara sampah organik dan anorganik. Dengan teknologi pengenalan visual, aplikasi ini mengidentifikasi jenis sampah yang telah di foto dengan kamera. Informasi detil tentang setiap jenis sampah disediakan, termasuk tips pengolahan yang tepat.</string>
    <string name="par2">Manfaat Aplikasi :\n
        \u2022 \tMembedakan sampah organik dan anorganik \n\t\tdengan akurasi.\n
        \u2022 \tMemberikan informasi tentang jenis sampah \n\t\tdan cara pengolahannya.\n
        \u2022 \tMeningkatkan efisiensi dalam pemilahan \n\t\tsampah.\n
        \u2022 \tMengurangi kesalahan dalam proses daur \n\t\tulang sampah.\n
        \u2022 \tMendorong kesadaran lingkungan dan \n\t\tpengolahan sampah yang berkelanjutan.</string>
    <string name="par3">Cara penggunaan: \n
        \u2022 \tMembedakan sampah organik dan anorganik \n\t\tdengan akurasi. \n
        \u2022 \tMemberikan informasi tentang jenis sampah \n\t\tdan cara pengolahannya. \n
        \u2022 \tMeningkatkan efisiensi dalam pemilahan \n\t\tsampah. \n
        \u2022 \tMengurangi kesalahan dalam proses daur \n\t\tulang sampah. \n
        \u2022 \tMendorong kesadaran lingkungan dan \n\t\tpengolahan sampah yang berkelanjutan.</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="image">Image</string>


    <string-array name="data_name">
        <item>Sampah Organik</item>
        <item>Sampah Anorganik</item>
        <item>Sampah B3</item>
    </string-array>


    <string-array name="data_photo">
        <item tools:ignore="TypographyDashes">https://waste4change.com/blog/wp-content/uploads/Composting-NYC-1024x756-1.jpg</item>
        <item>https://sustaination.id/wp-content/uploads/2021/02/jasmin-sessler-5Wfttm2CjeI-unsplash.jpg</item>
        <item>https://blogpictures.99.co/baterai-bekas.jpg</item>
    </string-array>


    <string-array name="data_desc">
        <item>
            Sampah organik mengacu pada bahan limbah yang berasal dari organisme hidup atau mengandung senyawa organik. Ini mencakup hal-hal seperti sisa makanan, hiasan halaman, sisa pertanian, dan produk kertas. Sampah organik bersifat biodegradable, artinya dapat diuraikan secara alami oleh mikroorganisme menjadi zat yang lebih sederhana. Pengelolaan sampah organik yang tepat melalui metode seperti pengomposan atau penguraian anaerobik dapat mengubahnya menjadi sumber daya berharga seperti bahan pembenah tanah yang kaya nutrisi atau sumber energi terbarukan. Dengan mengalihkan sampah organik dari tempat pembuangan sampah dan memanfaatkannya secara efektif, kita dapat mengurangi emisi gas rumah kaca, mendukung praktik berkelanjutan, dan berkontribusi pada ekonomi sirkular. \n \n \nPenanganan: \nTempat sampah hijau diperuntukkan bagi sampah organik, jadi Anda bisa membuang sampah organik jenis ini ke dalam tong sampah hijau. Selain itu, ada beberapa pilihan untuk mengelola sampah organik dengan cara sebagai berikut: \n \n1. Pengomposan: Pengomposan adalah cara sederhana dan efektif untuk menangani sampah organik. Anda dapat membuat tumpukan kompos atau menggunakan tempat sampah kompos di halaman belakang atau taman Anda. Dengan mengumpulkan sisa makanan, dan bahan organik lainnya. Anda dapat membuat kompos kaya nutrisi yang dapat digunakan untuk menyuburkan tanaman dan kebun. Berkolaborasilah dengan tetangga, organisasi lokal, atau lembaga pengelolaan sampah untuk membangun fasilitas pengomposan bersama di lingkungan Anda. Hal ini dapat membantu mengoptimalkan pemanfaatan sumber daya dan mendorong ekonomi sirkular. \n \n2. Vermicomposting di Rumah: Vermicomposting adalah pilihan yang sangat baik untuk ruang keluarga yang lebih kecil, seperti rumah atau apartemen dengan area luar ruangan yang terbatas. Anda dapat menyiapkan tempat pengomposan cacing di dalam ruangan menggunakan cacing pengomposan khusus (seperti jentik-jentik merah) untuk menguraikan sampah organik. Cacing yang dihasilkan dapat digunakan sebagai bahan pembenah tanah yang kaya nutrisi untuk tanaman hias atau taman balkon. \n \n3. Pasar Petani dan Pertanian Organik: Beberapa pasar petani atau pertanian organik di Indonesia dapat menerima sampah organik untuk tujuan pengomposan. Mereka sering kali memiliki sistem pengomposan sendiri dan dapat memanfaatkan bahan organik tambahan dengan baik. Hubungi pasar petani setempat atau pertanian organik untuk menanyakan apakah mereka menerima sumbangan sampah organik. \n \n4. Produksi Biogas: Pertimbangkan untuk membuat biogas untuk volume sampah organik yang lebih besar. Biogas dihasilkan melalui pencernaan sampah organik secara anaerobik dan dapat digunakan sebagai sumber energi terbarukan untuk memasak atau pembangkit listrik. Ingat, penting untuk memisahkan sampah organik dari jenis sampah lainnya, seperti plastik atau logam, untuk memastikan daur ulang dan pembuangan yang benar. \n \nDengan mengelola sampah organik secara bertanggung jawab, Anda dapat berkontribusi untuk mengurangi beban sampah secara keseluruhan, mendorong praktik berkelanjutan, dan memelihara lingkungan yang lebih sehat di Indonesia!
        </item>
        <item>
            Sampah anorganik mengacu pada bahan sampah yang bukan berasal dari organisme hidup dan tidak mengandung senyawa organik. Ini mencakup bahan yang tidak dapat terbiodegradasi seperti logam, kaca, plastik, keramik, dan bahan kimia sintetis. Berbeda dengan sampah organik, sampah anorganik tidak terurai secara alami atau mudah terurai. Bahan-bahan ini dapat bertahan di lingkungan dalam jangka waktu lama, menyebabkan polusi dan potensi kerusakan ekosistem. Pengelolaan sampah anorganik yang efektif melibatkan praktik seperti daur ulang, penggunaan kembali, dan metode pembuangan yang benar seperti penimbunan atau pembakaran. Dengan meminimalkan timbulan sampah anorganik dan menerapkan strategi pengelolaan sampah berkelanjutan, kita dapat mengurangi dampak lingkungan dan mendorong konservasi sumber daya. \n \n \nPenanganan: \nTempat sampah berwarna kuning diperuntukkan bagi sampah anorganik, jadi Anda bisa membuang sampah jenis ini di tempat sampah berwarna kuning. Selain itu, Anda dapat mengelola sampah anorganik dengan cara sebagai berikut: \n \n1. Daur Ulang: Identifikasi bahan-bahan yang dapat didaur ulang di dalamnya sampah anorganik Anda, seperti botol plastik, kertas, karton, kaca, dan logam. Periksa dengan pusat daur ulang lokal atau pengelolaan limbah perusahaan untuk mencari tahu di mana Anda dapat mengirimkan bahan-bahan ini untuk didaur ulang. Dukung inisiatif daur ulang lokal dan dorong negara lain untuk melakukan hal yang sama. \n \n2. Pengumpulan Sampah Elektronik: Untuk sampah elektronik, termasuk peralatan lama, komputer, dan ponsel, penting untuk membuangnya dengan benar untuk mencegah pencemaran lingkungan. Carilah tempat pengumpulan limbah elektronik atau perusahaan daur ulang limbah elektronik resmi di wilayah Anda. Mereka berspesialisasi dalam menangani limbah elektronik dan memastikan bahwa komponen berbahaya dikelola dengan aman. \n \n3. Donasi dan Penggunaan Kembali: Pertimbangkan untuk mendonasikan atau menggunakan kembali barang-barang yang masih dalam kondisi baik daripada membuangnya. Misalnya, Anda bisa memanfaatkan kembali wadah penyimpanan stoples kaca atau menggunakan koran bekas untuk membungkus barang. Sumbangkan atau jual barang-barang yang masih dalam kondisi baik untuk memperpanjang umurnya. \n \nPendekatan ini membantu mengurangi limbah dan memperpanjang umur barang yang dapat digunakan. Ingat, sangat penting untuk memisahkan sampah anorganik dari sampah organik untuk memastikan daur ulang dan pembuangan yang benar. Selain itu, mempraktikkan pengurangan sampah dan konsumsi secara sadar dengan meminimalkan penggunaan plastik sekali pakai dan kemasan dapat berkontribusi secara signifikan terhadap pengurangan volume sampah anorganik yang dihasilkan.
        </item>
        <item>
            Limbah berbahaya mengacu pada bahan limbah yang memiliki sifat yang berpotensi membahayakan kesehatan manusia, lingkungan, atau keduanya. Ini mencakup zat yang beracun, mudah terbakar, korosif, reaktif, atau menular. Limbah B3 dapat berasal dari berbagai sumber seperti proses industri, fasilitas kesehatan, laboratorium, dan rumah tangga. Penanganan, penyimpanan, atau pembuangan limbah berbahaya yang tidak tepat dapat menimbulkan risiko kesehatan yang serius dan pencemaran lingkungan. Limbah-limbah ini memerlukan perhatian khusus dan prosedur pengelolaan khusus untuk memastikan penanganannya aman dan meminimalkan dampaknya. \n \n \nPenanganan: \nempat sampah berwarna merah diperuntukkan bagi sampah anorganik, jadi Anda bisa membuang sampah jenis ini di tempat sampah berwarna merah. Selain itu, pengelolaan limbah B3 dapat dilakukan dengan cara sebagai berikut: \n \n1. Penyimpanan: Simpan limbah berbahaya dalam wadah yang aman dan sesuai serta tahan terhadap kebocoran atau tumpahan. Pastikan area penyimpanan terpelihara dengan baik, berventilasi baik, dan dilengkapi dengan tindakan keselamatan yang diperlukan. Periksa dan pantau fasilitas penyimpanan secara teratur untuk mencegah kecelakaan. \n \n2. Transportasi: Limbah berbahaya harus diangkut oleh pengangkut berlisensi yang mematuhi peraturan transportasi. Pastikan sampah dikemas dengan aman dan diberi label dengan benar selama pengangkutan untuk mencegah kebocoran atau tumpahan. \n \n3. Pengolahan dan pembuangan: Pengolahan dan pembuangan limbah berbahaya harus dilakukan di fasilitas resmi. Hal ini mungkin melibatkan berbagai metode seperti pembakaran, pengolahan kimia, atau daur ulang. Pilih fasilitas yang memenuhi standar lingkungan dan memiliki izin yang diperlukan untuk Penanganan Limbah B3. \n \n4. Pencatatan dan pelaporan: Memelihara catatan akurat mengenai produksi, penyimpanan, pengangkutan, pengolahan, dan pembuangan limbah berbahaya. Menyerahkan laporan yang diperlukan kepada otoritas pengatur terkait sesuai pedoman dan jadwal mereka. \n \nIngat, limbah berbahaya tidak boleh tercampur dengan limbah rumah tangga biasa atau dibuang ke saluran pembuangan, karena dapat mencemari lingkungan dan menimbulkan risiko bagi kesehatan manusia. Selalu memprioritaskan pembuangan limbah berbahaya secara bertanggung jawab untuk melindungi lingkungan dan kesejahteraan masyarakat di Indonesia.
        </item>
    </string-array>
</resources>