<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Logo" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:fontFamily="@font/bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logo" />

    <TextView
        android:id="@+id/kenali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kenali_jenis_sampah"
        android:textSize="16sp"
        android:fontFamily="@font/bold"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:layout_constraintStart_toEndOf="@+id/logo" />

    <TextView
        android:id="@+id/jenis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/bold"
        android:text="@string/jenis_jenis_sampah"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_trash"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jenis" />
</androidx.constraintlayout.widget.ConstraintLayout>