<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailTrashActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="?attr/colorOnPrimary"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name_received"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/bold"
                android:layout_below="@id/photo_received"
                android:text="@string/name"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/confidence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_received"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/bold"
                android:text="Nilai Akurasi :"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/confidence"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                android:textSize="14sp"
                android:fontFamily="@font/regular"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp" />

            <ImageView
                android:id="@+id/photo_received"
                android:layout_width="wrap_content"
                android:layout_height="320dp"
                android:src="@drawable/logo"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image"
                android:layout_marginTop="8dp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>